# backend/docs/swagger.json
@@ -4845,6 +4845,24 @@
                             ]
                         }
                     },
+                    "499": {
+                        "description": "",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/api.APIError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
                     "502": {
                         "description": "Bad Gateway",
                         "schema": {
